# ambiscape

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  generate_figures.py  index.md  install.md  quickstart.md
docs/guide/: acoustics.md  anthropophony.md  biophony.md  capture.md  carillon.md  catalog.md  compare.md  deposit.md  descriptors.md  enf.md  geophony.md  indices.md  longitudinal.md  mechanical.md  ml.md  modulation.md  music.md  resolve.md  rhythm.md  schedule.md  sessions.md  spatial.md  states.md  stereo-mono.md  taxonomy.md  timbre.md  tonality.md  vision.md
guide/acoustics/: index.html
guide/anthropophony/: index.html
guide/biophony/: index.html
guide/capture/: index.html
guide/carillon/: index.html
guide/catalog/: index.html
guide/compare/: index.html
guide/deposit/: index.html
guide/descriptors/: index.html
guide/enf/: index.html
guide/geophony/: index.html
guide/indices/: index.html
guide/longitudinal/: index.html
guide/mechanical/: index.html
guide/ml/: index.html
install/: index.html
quickstart/: index.html
search/: search_index.json
src/ambiscape/: cli.py  (+34 more)
tests/: __init__.py  conftest.py  test_binaural_modes.py  test_biophony.py  test_capture.py  test_carillon.py  test_catalog.py  test_compare.py  test_domain_modules.py  test_enf.py  test_indices.py  test_io_features.py  test_longitudinal.py  test_music.py  test_pipeline.py  test_pipeline_modes.py  test_resolve.py  test_resolve_integration.py  test_schaeffer.py  test_stereo_mono.py  test_toolbox.py  test_units.py  test_vision.py  test_vision_wiring.py
(+19 files in other folders)
