[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiscape"
version = "0.1.0"
description = "Long-duration first-order ambisonic soundscape analysis (streaming companion to ambiviz)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexander Refsum Jensenius", email = "a.r.jensenius@imv.uio.no" }]
keywords = ["ambisonics", "soundscape", "field-recording", "acoustics",
            "spatial-audio", "long-duration", "ISO-12913"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/fourMs/ambiscape"
Issues = "https://github.com/fourMs/ambiscape/issues"
"Author ORCID" = "https://orcid.org/0000-0001-6171-8743"
"Companion toolbox (ambiviz)" = "https://github.com/fisheggg/ambiviz"

[project.optional-dependencies]
viz = ["ambiviz>=0.0.1"]      # rich spatial visuals (anglegram/directogram/AEM) on extracted segments
iso = ["mosqito>=1.2"]        # ISO 532-1 loudness, sharpness, roughness (ambiscape iso)
music = ["librosa>=0.10"]     # MIR tempogram + chromagram (ambiscape music)
ml = ["panns-inference>=0.1", "silero-vad>=5.0", "torch>=2.0"]  # tags + speech gate
dev = ["pytest>=7.0"]

[project.scripts]
ambiscape = "ambiscape.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
